CHATS_SIT/force-app/main/default/objects/sfsit_t_sbsd_case_phone_hist__x.object
<CustomObject>
    <description>sfsit$t_sbsd_case_phone_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_sbsd_case_phone_hist</externalName>
   <fields>
        <fullName>cde_type_phone__c</fullName>
        <description>cde_type_phone</description>
        <externalDeveloperName>cde_type_phone</externalDeveloperName>
        <label>Phone Number Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_case_phone__c</fullName>
        <description>idn_sbsd_case_phone</description>
        <externalDeveloperName>idn_sbsd_case_phone</externalDeveloperName>
        <label>Phone Number ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_CASE_PHONE__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE_PHONE__c</referenceTo>
        <relationshipLabel>Case Phone Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_sbsd_case_phone_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_case_phone_hist__c</fullName>
        <description>idn_sbsd_case_phone_hist</description>
        <externalDeveloperName>idn_sbsd_case_phone_hist</externalDeveloperName>
        <label>Phone Number ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current Record indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_USER_CHANGE_LAST__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_sbsd_case_phone_hist1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTE_CHANGE_LAST__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nam_cntc_emerg__c</fullName>
        <description>nam_cntc_emerg</description>
        <externalDeveloperName>nam_cntc_emerg</externalDeveloperName>
        <label>Emergency contact Name?</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_phone__c</fullName>
        <description>nbr_phone</description>
        <externalDeveloperName>nbr_phone</externalDeveloperName>
        <label>Phone Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_phone_extn__c</fullName>
        <description>nbr_phone_extn</description>
        <externalDeveloperName>nbr_phone_extn</externalDeveloperName>
        <label>Phone Number Ext.</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_phone__c</fullName>
        <description>nbr_seq_phone</description>
        <externalDeveloperName>nbr_seq_phone</externalDeveloperName>
        <label>Number Sequence phone</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_time_call_best__c</fullName>
        <description>txt_time_call_best</description>
        <externalDeveloperName>txt_time_call_best</externalDeveloperName>
        <label>Best call time?</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Case Phone History</label>
    <pluralLabel>Case Phone History</pluralLabel>
</CustomObject>